--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=compras
 spring.datasource.url=jdbc:mysql://localhost:3306/dbcompras?createDatabaseIfNotExist=true
-spring.datasource.username=root
-spring.datasource.password=1607
+spring.datasource.username=campus2023
+spring.datasource.password=campus2023
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 spring.jpa.show-sql=true
